[package]
name = "rusty_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty_newsletter"

[dependencies]

actix-web = "4.4.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.139", features = ["derive"]}
config = { version = "0.13", default-features = false, features = ["yaml"] }

sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
reqwest = "0.11.22"